add a bit of caching - very simple - eliminates much of the remote traffic, but not all